hphp/test/slow/strict-utf8-mode/source-2.php.expectf
Fatal error: Invalid utf8 sequence in %s/strict-utf8-mode/source-2.php on line 6
